--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "socket.io": "^0.9.17",
     "xmldom": "^0.1.22"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
