--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
   "bugs": {
     "url": "https://github.com/spintheweb/spintheweb/issues"
   },
-  "homepage": "https://github.com/spintheweb/spintheweb#readme"
+  "homepage": "https://www.spintheweb.ord"
 }
