--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "Avvia programma",
-            "program": "${workspaceFolder}/server.js"
+            "program": "${workspaceFolder}/index.js"
         }
     ]
 }
