--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongodb": "^2.2.36",
     "socket.io": "^0.9.17",
     "uuid": "^7.0.3",
+    "websocket": "^1.0.31",
     "xmldom": "^0.1.31"
   },
   "devDependencies": {
