--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,6 @@
 {
-    "Languages": ["en", "it"]
+    "hostname": "127.0.0.1",
+    "port": "8080",
+    "languages": ["en", "it"],
+    "key": "Visualize then Realize"
 }
