--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,16 @@
     // Per ulteriori informazioni, visitare: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "type": "node",
             "request": "launch",
-            "name": "Avvia programma",
-            "program": "${workspaceFolder}/index.js"
+            "name": "Launch Debug",
+            "cwd": "${workspaceFolder}",
+            "runtimeExecutable": "npm",
+            "runtimeArgs": [
+                "run-script",
+                "debug"
+            ]
         }
     ]
 }
