--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "type": "module",
     "main": "index.js",
     "dependencies": {
+        "@xmldom/xmldom": "^0.8.10",
+        "accept-language-parser": "^1.5.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "express-ws": "^5.0.2",
         "html-entities": "^2.4.0",
-        "mime-types": "^2.1.35",
         "simple-git": "^3.19.1",
         "uuid": "^9.0.0"
     },
@@ -27,6 +28,7 @@
         "url": "https://github.com/spintheweb/project.git"
     },
     "keywords": [
+        "Spin the Web",
         "stw",
         "wbdl",
         "wbll",
