--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .*
-/node_modules
-!/.gitignore
+node_modules
+!.gitignore
 trash
-/studio/dev/*
-/public/cert/*
-/public/data/*
+studio/dev/*
+public/cert/*.pem
+public/data/*.json
 package-lock.json
