--- a/public/.settings
+++ b/public/.settings
@@ -3,8 +3,8 @@
     "hostname": "127.0.0.1",
     "port": 8080,
     "secret": "Spin the Web",
-    "webbase": "data/webbase.json",
-    "users": "data/users.json",
+    "webbase": ".data/webbase.json",
+    "users": ".data/users.json",
     "options": {
         "key": "cert/key.pem",
         "cert": "cert/cert.pem"
