--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "nodemon": "^3.0.1"
     },
     "scripts": {
-        "start": "node .",
-        "debug": "nodemon .",
+        "start": "set NODE_ENV=live && node .",
+        "debug": "set NODE_ENV=dev && nodemon .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
