--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dependencies": {
         "@xmldom/xmldom": "^0.8.10",
         "accept-language-parser": "^1.5.0",
+        "cookie-session": "^2.0.0",
         "express": "^4.18.2",
-        "express-session": "^1.17.3",
         "express-ws": "^5.0.2",
         "html-entities": "^2.4.0",
         "simple-git": "^3.19.1",
