Clean-up, refactored, studio webbase management

--- a/public/.settings
+++ b/public/.settings
@@ -1,6 +1,6 @@
 {
     "protocol": "http",
-    "hostname": "127.0.0.1",
+    "hostname": "spintheweb.org",
     "port": 8080,
     "secret": "Spin the Web",
     "webbase": ".data/webbase.json",
