--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.1",
     "description": "Spin the Web deals with the Webbase Description Language (WBDL). Simply put, HTML describes a web page, WBDL, a web site; and, while HTML is interpreted by a client side web browser, WBDL, by a server side web spinner.",
     "type": "module",
-    "main": "app.js",
+    "main": "stw.js",
     "dependencies": {
         "@xmldom/xmldom": "^0.8.10",
         "accept-language-parser": "^1.5.0",
@@ -18,7 +18,8 @@
     },
     "devDependencies": {
         "minify": "^5.2.0",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "terser": "^5.27.0"
     },
     "scripts": {
         "start": "set NODE_ENV=production&& node .",
