--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "type": "module",
     "main": "stw.js",
     "dependencies": {
-        "@xmldom/xmldom": "^0.8.10",
         "accept-language-parser": "^1.5.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
@@ -24,7 +23,8 @@
     "scripts": {
         "start": "set NODE_ENV=production&& node .",
         "debug": "set NODE_ENV=development&& nodemon .",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postbuild": "terser dist/stw.js --define process.env.NODE_ENV=\"'production'\" --config-file .terser -o dist/stw.js"
     },
     "repository": {
         "type": "git",
